[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "kea-exporter"
version = "0.7.7"
description = "Export Kea Metrics in the Prometheus Exposition Format"
authors = [
    { name = "Martin Weinelt", email = "hexa@darmstadt.ccc.de" },
    { name = "Marcin Zieba", email = "marcinpsk@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.1.7,<9.0",
    "prometheus-client>=0.20.0,<1.0",
    "requests>=2.32.5,<3.0"
]
readme = "README.rst"
keywords = [
    "prometheus",
    "exporter",
    "metrics",
    "kea",
    "dhcp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
changelog = "https://github.com/marcinpsk/kea-exporter/blob/develop/HISTORY"
homepage = "https://github.com/marcinpsk/kea-exporter"
repository = "https://github.com/marcinpsk/kea-exporter.git"
upstream = "https://github.com/mweinelt/kea-exporter"

[project.scripts]
kea-exporter = "kea_exporter.__main__:cli"

[tool.black]
line-length = 120

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
# Assume Python 3.10
target-version = 'py310'

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "E501"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "ruff==0.14.7",
    "black==25.11.0",
    "coverage[toml]>=7.12.0",
    "python-semantic-release>=10.5.2",
]

[tool.coverage.run]
branch = true
source = ["kea_exporter"]

[tool.coverage.report]
omit = ["tests/*"]
show_missing = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["kea_exporter/__init__.py:__version__"]
branch = "staging"
build_command = "pdm build"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
commit_parser = "conventional"
commit = true
tag = true

[tool.semantic_release.branches.staging]
match = "staging"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "HISTORY"
template = "templates/CHANGELOG.md.j2"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"


[tool.semantic_release.remote]
name = "origin"
type = "github"
token = { env = "GITHUB_TOKEN" }
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
